* Added icons for the close function. Closed downloads will be colored black just liked stopped ones. * Added missing whitespace after bullet_go.png when download was stopped. * Added d.open to check if download is closed (d.active obsolete). * Changed check for running torrents back to d.state * Changed the word 'ratio' to 'Ratio' because everything else is capitalized, too.
git-svn-id: http://wtorrent-project.googlecode.com/svn/trunk@34 5a4c1571-8183-a91d-cfd1-48c08a65d015

--- a/wtorrent/home/css/estil.css
+++ b/wtorrent/home/css/estil.css
@@ -129,7 +129,7 @@ img {
 	padding: 10px;
 	padding-top: 15px;   
 	margin: 0px auto 10px auto;
-    width: 950px;
+    width: 971px;
   	background-color: #ffffff;
   	text-align: center;
   	font-family: arial;
@@ -162,7 +162,7 @@ img {
 }
 #tbBulk {
 	height: 25px; 
-	width: 930px; 
+	width: 949px;
 	margin: 0px auto; 
 	padding: 0px; 
 	margin-top: 0px;
@@ -170,7 +170,7 @@ img {
 }
 .tbBulk {
 	height: 25px; 
-	width: 930px; 
+	width: 949px;
 	margin: 0px auto; 
 	padding: 0px; 
 	margin-top: 0px;
@@ -179,7 +179,7 @@ img {
 #tbCell {
 	height: 25px; 
 	font-weight: bold; 
-	width: 891px; 
+	width: 912px; 
 	float: left;
 	border: 1px solid #d4d4d4; 
 	background-color: #d7e4ef; 
@@ -196,7 +196,7 @@ img {
 	overflow:hidden; 
 	padding:0; 
 	margin:20px auto 0px auto; 
-	width:870px; 
+	width:889px; 
 	color:#444;
 }
 * html #tabs { 
